tests/fail/dangling_pointers/deref-invalid-ptr.stderr
error: Undefined Behavior: dereferencing pointer failed: 0x10 is not a valid pointer
  --> $DIR/deref-invalid-ptr.rs:LL:CC
   |
LL |     let _y = unsafe { &*x as *const u32 };
   |                       ^^^ dereferencing pointer failed: 0x10 is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/deref-invalid-ptr.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

